@@ -92,7 +92,7 @@ const int SIZEOF_BITMAPINFOHEADER= sizeof(DWORD)+sizeof(LONG)+sizeof(LONG)+2*siz
 ///defined for gcc which pads size of structs (not entirely necessary)
 const int SIZEOF_RGBQUAD=sizeof(BYTE)*4;
 ///holds all the textures in a huge hash table
-Hashtable<string, Texture,char [127]> texHashTable;
+Hashtable<string, Texture,char [511]> texHashTable;
 ///returns if a texture exists
 Texture * Texture::Exists (string s, string a) {
   return Texture::Exists (s+a);
